@@ -1,5 +1,3 @@
-release 0.3.1 (alpha)
-
 * extended web site with overview, api docs, faq section, instalation instructions, etc.
   (app requires Java 2, applet can be run in JVM 1.1)
 
@@ -23,8 +21,5 @@ release 0.4 (alpha)
 (i'm not sure if can be used in LGPL MicroEmulator)
 
 * (?) applet loader - during loading applet code progress bar should be visible
-
-* obfuscator for applet: maybe LGPL Retroguard, applet jar could be 
-reduced to 175KB, i hope
 
 
